<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sonata Coral</string>
    <string name="listaDeCoralistas">Lista de Coralistas</string>
    <string name="cadastroCoralistas">Cadastro de Coralistas</string>
    <string name="pagamentoMensalidade">Pagamento Mensalidade</string>
    <string name="cobrarMensalidade">Cobrar Mensalidade</string>
    <string name="contentDescription"></string>
    <string name="mensalidades">Mensalidades</string>
    <string name="menu_coralistas">Coralistas</string>
    <string name="menu_mensalidades">Mensalidades</string>
    <string name="salvar">Salvar</string>
    <string name="nome">Nome:</string>
    <string name="rg">Rg:</string>
    <string name="telefone">Telefone:</string>
    <string name="email">Email:</string>
    <string name="dataNascimento">Data de Nascimento:</string>
    <string name="nypeVocal">Nype:</string>
    <string name="nype_soprano">Soprano</string>
    <string name="nype_contralto">Contralto</string>
    <string name="nype_tenor">Tenor</string>
    <string name="nype_baixo">Baixo</string>
    <string name="cancelar">Cancelar</string>
    <string name="formulario_coralista">Dados do Coralista</string>
    <string name="enviarEmail">Enviar Email</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="pesquisarCoralista">Pesquisar Coralista</string>
    <string name="coralista">Coralista:</string>
    <string name="ano">Ano:</string>
    <string name="mes">Mês:</string>
    <string name="valorAPagar">Valor á Pagar:</string>
    <string name="valorPago">Valor Pago:</string>
    <string name="confirmarPagamento">Confirmar Pagamento</string>
    <string name="cobrancaMensalidade">Cobrança Mensalidade</string>
    <string name="fluxo_caixa">Fluxo Caixa</string>
    <string name="backup">Backup</string>
    <string name="enviarBackup">Enviar Backup</string>
    <string name="restaurarBackup">Restaurar Backup</string>
    <string name="saldo">Saldo</string>
    <string name="entradas">Entradas</string>
    <string name="saidas">Saídas</string>
    <string name="totalMensalidadesPagas">Mensalidades Pagas</string>
    <string name="descricao">Descrição</string>
    <string name="entrada">Entrada</string>
    <string name="saida">Saída</string>
    <string name="defineValorMensalidade">Definir Valor Mensalidade</string>
    <string name="valorMensalidade">Valor Mensalidade</string>
    <string name="valorAcrescimo">Acréscimo</string>
    <string name="confirmar">Confirmar</string>
    <string name="cadastroFluxoCaixa">Cadastro Fluxo de Caixa</string>
    <string name="listagemFluxoCaixa">Listagem Fluxo de Caixa</string>
    <string name="semAcrescimo">Sem/Acréscimo</string>
    <string name="comAcrescimo">Com/Acréscimo</string>
    <string name="frequencia">Frequência</string>
    <string name="controleFrequencia">Controle de Frequência</string>
    <string name="confirmarHorarioChamada">Confirmar Horário</string>
    <string name="horarioChamada">Horário Chamada</string>
    <string name="minutosToleranciaChamada">Minutos Tolerância</string>
    <string name="btnIniciarRegistroChamada">Iniciar Registro Chamada</string>
    <string name="ativos">Ativos</string>
    <string name="inativos">Inativos</string>
    <string name="registrarChamada">Registrar Chamada</string>
    <string name="enviarFrequenciaPorEmail">Enviar Frequência Por Email</string>
    <string name="acessoRestrito">Acesso Restrito</string>
    <string name="login">Login</string>
    <string name="senha">Senha</string>
    <string name="btn_Acessar">Acessar</string>
    <string name="relatorios">Relatórios</string>
    <string name="relatorioCadastroCoralistas">Cadastro Coralistas</string>
    <string name="relatorioRegistroFrequencias">Registro Frequencias</string>
    <string name="relatorioFluxoCaixa">Fluxo Caixa</string>
    <string name="relatorioPagamentoMensalidades">Pagamento Mensalidades</string>
    <string name="gerarCoralistasTxt">Gerar Coralistas.TXT</string>
    <string name="gerarQrCodesCoralistasTxt">Gerar QrCodes Coralistas.TXT</string>
    <string name="configuracoes">Configurações</string>
    <string name="teste">teste</string>
    <string name="descontoTerceiro">Desconto mais de 3 familiares</string>
    
</resources>
