<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp" >

    
    <TextView
        android:id="@+id/saldo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/saldo"
        android:textSize="20dp"
        tools:ignore="SpUsage" />

    <TextView
        android:id="@+id/entradas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/verde"
        android:text="@string/entradas"
        android:textColor="@color/branco"
        android:textSize="20dp"
        tools:ignore="SpUsage" />

    <TextView
        android:id="@+id/saidas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/vermelho"
        android:text="@string/saidas"
        android:textColor="@color/branco"
        android:textSize="20dp"
        tools:ignore="SpUsage" />
    
     <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/listagemFluxoCaixa"
        style="@style/tituloStyle"
        tools:ignore="SpUsage" />
     
      <TextView
        android:id="@+id/totalMensalidadesPagas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/azul"
        android:text="@string/totalMensalidadesPagas"
        android:textColor="@color/branco"
        tools:ignore="SpUsage" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp" >

        <EditText
            android:id="@+id/pesquisaDescricao"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/pesquisar"
            android:inputType="text" />

        <ImageButton
            android:id="@+id/btn_adicionarFluxoCaixa"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_weight="0.13"
            android:background="@android:color/transparent"
            android:contentDescription="@string/contentDescription"
            android:src="@drawable/new_user" />
    </LinearLayout>

    <ListView
        android:id="@+id/listaDeEntradasESaidas"
        android:layout_width="match_parent"
        android:layout_height="fill_parent" >
    </ListView>

</LinearLayout>