<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            style="@style/tituloStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/cadastroFluxoCaixa"
            tools:ignore="SpUsage" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/descricao" />

        <EditText
            android:id="@+id/descricao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/valorAPagar" />

        <EditText
            android:id="@+id/valor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="fill_parent" >

            <RadioButton
                android:id="@+id/radiobutton_entrada"
                android:checked="true"
                android:text="@string/entrada" />

            <RadioButton
                android:id="@+id/radiobutton_saida"
                android:text="@string/saida" />
        </RadioGroup>

        <Button
            android:id="@+id/btn_salvar"
            style="@style/styleSaveButton"
            android:layout_width="match_parent"
            android:layout_height="fill_parent" />
    </LinearLayout>

</ScrollView>