<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp" >

    <TextView
        style="@style/tituloStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginBottom="10dp"
        android:text="@string/mensalidades" />

    <TextView
        android:id="@+id/coralista"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/coralista"
        android:textSize="20dp"
        tools:ignore="SpUsage" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ano"
            android:textSize="20dp"
            tools:ignore="SpUsage" />

        <Spinner
            android:id="@+id/spinnerAno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="50dp"
            tools:ignore="SpUsage,HardcodedText" />
    </LinearLayout>

    <ListView
        android:id="@+id/listaMesesAPagar"
        android:layout_width="match_parent"
        android:layout_height="fill_parent" >
    </ListView>

</LinearLayout>